<resources>
    <string name="app_name">MVVM-Hilt-StateFlow-Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="genres">Genres: </string>
    <string name="status">Status: </string>
    <string name="release_date">Release Date: </string>
    <string name="vote_average">Vote Average: </string>
    <string name="vote_count">Vote Count: </string>
    <string name="overview">Overview: </string>
</resources>